@@ -423,6 +423,10 @@
 					<artifactId>bcprov-jdk16</artifactId>
 					<groupId>bouncycastle.bcprov-jdk16</groupId>
 				</exclusion>
+				<exclusion>
+					<artifactId>bcprov-ext-jdk15</artifactId>
+					<groupId>org.bouncycastle</groupId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
